--- a/templates/home/category-product.html
+++ b/templates/home/category-product.html
@@ -88,7 +88,7 @@
                 <a href="{% url 'svg_icon_detail' product.slug %}"  aria-label="{{product.title}}" class="product-box-p-name">{{product.title}}</a>
                 <!--category-->
                 <span class="p-box-category">
-                    <a href="javascript:void(0)" aria-label="{{product.category}}">{{product.category}}</a>
+                    <a href="{% url 'category_detail' product.category.id %}" aria-label="{{product.category}}">{{product.category}}</a>
                 </span>
                 <!--details-->
                 <p>{{product.details}}</p>
