--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2181,7 +2181,7 @@ nav:after{
     transition: all ease 0.3s;
 }
 .r-product-box.r-category-box:hover .r-product-img img{
-    transform: scale(1.3);
+    transform: scale(1.2);
 }
 .r-product-box.r-category-box .r-product-text{
     display: flex;
@@ -4285,3 +4285,22 @@ a .alibaba{
     font-size: 1.2rem;
     color: #262626;
 }
+/* mgnifer */
+
+.loupe {
+    display: none;
+    position: absolute;
+    width: 200px;
+    height: 200px;
+    border: 1px solid rgb(196, 196, 196);
+    box-shadow: 5px 5px 12px rgb(0, 0, 0,0.12);
+    background: rgba(0, 0, 0, 0.25);
+    cursor: crosshair;
+    overflow: hidden;
+    z-index: 1000;
+  }
+  
+  .loupe img {
+    position: absolute;
+    right: 0;
+  }
