--- a/templates/home/product.html
+++ b/templates/home/product.html
@@ -73,7 +73,7 @@
             <div style="width:100%" class="swiper mySwiper2">
                 <div class="swiper-wrapper">
                     {% for images in product.product_images.all %}
-                    <div class="swiper-slide">
+                    <div class="swiper-slide product-img">
                         <img src="{{images.image.url}}" alt="{{product.title}}"/>
                     </div>
                     {% endfor %}
@@ -81,6 +81,7 @@
                 <div class="swiper-button-next"></div>
                 <div class="swiper-button-prev"></div>
               </div>
+              <div class="loupe"></div>
               <div thumbsSlider="" class="swiper mySwiper">
                 <div class="swiper-wrapper">
                     {% for images in product.product_images.all %}
@@ -142,6 +143,7 @@
 {% block body_script %}
 <!--==Jquery====================-->
 <script src="{% static 'js/swiper-bundle.min.js' %}"></script>
+<script src="{% static 'js/jquery-3.7.1.js' %}"></script>
 
 
   <!-- Initialize Swiper -->
@@ -162,5 +164,52 @@
         swiper: swiper,
       },
     });
+
+
+    var $loupe = $(".loupe"),
+    loupeWidth = $loupe.width(),
+    loupeHeight = $loupe.height();
+
+$(document).on("mouseenter", ".product-img", function (e) {
+    var $currImage = $(this),
+        $img = $('<img/>')
+        .attr('src', $('img', this).attr("src"))
+        .css({ 'width': $currImage.width() * 2, 'height': $currImage.height() * 2 });
+
+    $loupe.html($img).fadeIn(100);
+    
+    $(document).on("mousemove",moveHandler);
+                   
+    function moveHandler(e) {
+        var imageOffset = $currImage.offset(),
+            fx = imageOffset.left - loupeWidth / 2,
+            fy = imageOffset.top - loupeHeight / 2,
+            fh = imageOffset.top + $currImage.height() + loupeHeight / 2,
+            fw = imageOffset.left + $currImage.width() + loupeWidth / 2;
+        
+        $loupe.css({
+            'left': e.pageX - 75,
+            'top': e.pageY - 75
+        });
+
+        var loupeOffset = $loupe.offset(),
+            lx = loupeOffset.left,
+            ly = loupeOffset.top,
+            lw = lx + loupeWidth,
+            lh = ly + loupeHeight,
+            bigy = (ly - loupeHeight / 4 - fy) * 2,
+            bigx = (lx - loupeWidth / 4 - fx) * 2;
+
+        $img.css({ 'left': -bigx, 'top': -bigy });
+
+        if (lx < fx || lh > fh || ly < fy || lw > fw) {
+            $img.remove();
+            $(document).off("mousemove",moveHandler);
+            $loupe.fadeOut(100);
+        }
+    }
+});
+
+
   </script>
 {% endblock body_script %}
