--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,6 +20,9 @@ body{
     width: 100%;
     background-color: #f5f5f5;
 }
+.main-body{
+    overflow-x: hidden;
+}
 .fixedbody{
     display: flex;
     flex-direction: column;
