--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1362,14 +1362,27 @@ nav:after{
 .static-content h4,
 .static-content h5,
 .static-content h6 {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
     color: #1f1f1f;
     font-weight: 500;
 }
-
+.static-content strong{
+    color: #1a1a1a;
+}
 .static-content p {
     color: #525252;
     margin: 10px 0px;
+}
+.static-content a{
+    color: var(--second-main-color);
+}
+.static-content a:hover{
+    text-decoration: underline;
+}
+.static-content blockquote{
+    font-size: 1rem;
+    padding-left: 20px;
+    border-left: 4px solid #eeeeee;
 }
 
 .static-content ul {
@@ -1384,6 +1397,15 @@ nav:after{
     object-position: center;
     border-radius: 20px;
     max-height: 550px !important;
+}
+.static-content table,
+.static-content th,
+.static-content td{
+    border: 1px solid #000;
+}
+.static-content table{
+    width: 100%;
+    margin: 30px 0px;
 }
 
 @media(max-width:600px) {
